test/corpus/02-attributes.txt
================================================================================
func.func with result attribute
================================================================================
func.func @example_fn_result() -> (f64 {dialectName.attrName = 0 : i64})
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (float_type)))
            (attribute
              (dictionary_attribute
                (attribute_entry
                  (bare_id)
                  (attribute_value
                    (integer_literal)
                    (type
                      (builtin_type
                        (integer_type)))))))))))))

================================================================================
func.func with argument attribute
================================================================================
func.func @example_fn_arg(%x: i32 {swift.self = unit})
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (integer_type)))
          (attribute
            (dictionary_attribute
              (attribute_entry
                (bare_id)
                (attribute_value
                  (unit_literal))))))))))

================================================================================
strided attribute in memref
================================================================================
func.func @dot_view(%arg0: memref<?xf32, strided<[1], offset: ?>>,
  %arg1: memref<?xf32, strided<[1], offset: ?>>, %arg2: memref<f32>) {
  linalg.dot ins(%arg0, %arg1 : memref<?xf32, strided<[1], offset: ?>>,
                                memref<?xf32, strided<[1], offset: ?>>)
             outs(%arg2:  memref<f32>)
  return
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (memref_type
                (dim_list
                  (type
                    (builtin_type
                      (float_type))))
                (attribute_value
                  (builtin_attribute
                    (strided_layout
                      (integer_literal)))))))
          (value_use)
          (type
            (builtin_type
              (memref_type
                (dim_list
                  (type
                    (builtin_type
                      (float_type))))
                (attribute_value
                  (builtin_attribute
                    (strided_layout
                      (integer_literal)))))))
          (value_use)
          (type
            (builtin_type
              (memref_type
                (dim_list
                  (type
                    (builtin_type
                      (float_type))))))))
        (region
          (entry_block
            (operation
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (memref_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type))))
                      (attribute_value
                        (builtin_attribute
                          (strided_layout
                            (integer_literal)))))))
                (type
                  (builtin_type
                    (memref_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type))))
                      (attribute_value
                        (builtin_attribute
                          (strided_layout
                            (integer_literal)))))))
                (bare_id)
                (value_use)
                (type
                  (builtin_type
                    (memref_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (custom_operation
                (custom_op_name)))))))))

================================================================================
dense attribute in linalg.depthwise_conv_1d_nwc_wcm
================================================================================
func.func @depthwise_conv_1d_nwc_wcm(%input: tensor<1x12x8xf32>, %filter: tensor<3x8x8xf32>)
  -> tensor<1x10x8x8xf32> {
  %zero = arith.constant 0.000000e+00 : f32
  %init = tensor.empty() : tensor<1x10x8x8xf32>
  %fill = linalg.fill ins(%zero : f32) outs(%init : tensor<1x10x8x8xf32>) -> tensor<1x10x8x8xf32>
  %0 = linalg.depthwise_conv_1d_nwc_wcm {dilations = dense<1> : tensor<1xi64>,
    strides = dense<1> : tensor<1xi64>}
    ins(%input, %filter : tensor<1x12x8xf32>, tensor<3x8x8xf32>)
    outs(%fill : tensor<1x10x8x8xf32>) -> tensor<1x10x8x8xf32>
  return %0 : tensor<1x10x8x8xf32>
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (tensor_type
                (dim_list
                  (dimension_size)
                  (dimension_size)
                  (dimension_size)
                  (type
                    (builtin_type
                      (float_type)))))))
          (value_use)
          (type
            (builtin_type
              (tensor_type
                (dim_list
                  (dimension_size)
                  (dimension_size)
                  (dimension_size)
                  (type
                    (builtin_type
                      (float_type))))))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (tensor_type
                  (dim_list
                    (dimension_size)
                    (dimension_size)
                    (dimension_size)
                    (dimension_size)
                    (type
                      (builtin_type
                        (float_type)))))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (float_literal)
                (type
                  (builtin_type
                    (float_type)))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (type
                  (builtin_type
                    (float_type)))
                (bare_id)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (tensor_literal
                          (integer_literal))
                        (type
                          (builtin_type
                            (tensor_type
                              (dim_list
                                (dimension_size)
                                (type
                                  (builtin_type
                                    (integer_type)))))))))
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (tensor_literal
                          (integer_literal))
                        (type
                          (builtin_type
                            (tensor_type
                              (dim_list
                                (dimension_size)
                                (type
                                  (builtin_type
                                    (integer_type)))))))))))
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))
                (bare_id)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (float_type)))))))))))))))

================================================================================
Generic function bracketed attributes
================================================================================
"llvm.func"() ({
}) {sym_name = "qux", function_type = !llvm.func<void (ptr<i64>, i64)>,
    arg_attrs = [{llvm.noalias}, {}], xxx = {yyy = 42}} : () -> ()
--------------------------------------------------------------------------------

(toplevel
  (operation
    (generic_operation
      (string_literal)
      (region)
      (attribute
        (dictionary_attribute
          (attribute_entry
            (bare_id)
            (attribute_value
              (string_literal)))
          (attribute_entry
            (bare_id)
            (attribute_value
              (type
                (dialect_type
                  (pretty_dialect_item
                    (dialect_namespace)
                    (dialect_ident)
                    (pretty_dialect_item_body
                      (bare_id)
                      (bare_id)
                      (pretty_dialect_item_body
                        (type
                          (builtin_type
                            (integer_type))))
                      (type
                        (builtin_type
                          (integer_type)))))))))
          (attribute_entry
            (bare_id)
            (attribute_value
              (dictionary_attribute
                (attribute_entry
                  (bare_id)))
              (dictionary_attribute)))
          (attribute_entry
            (bare_id)
            (attribute_value
              (dictionary_attribute
                (attribute_entry
                  (bare_id)
                  (attribute_value
                    (integer_literal))))))))
      (function_type))))

================================================================================
Nested array attribute values
================================================================================
"test.op"() {nested = [[1 : i32, 2 : i32], [3 : i32]], passthrough = [["prefer-vector-width", "512"]]} : () -> ()
--------------------------------------------------------------------------------

(toplevel
  (operation
    (generic_operation
      (string_literal)
      (attribute
        (dictionary_attribute
          (attribute_entry
            (bare_id)
            (attribute_value
              (integer_literal)
              (type
                (builtin_type
                  (integer_type)))
              (integer_literal)
              (type
                (builtin_type
                  (integer_type)))
              (integer_literal)
              (type
                (builtin_type
                  (integer_type)))))
          (attribute_entry
            (bare_id)
            (attribute_value
              (string_literal)
              (string_literal)))))
      (function_type))))

================================================================================
Distinct builtin attribute values
================================================================================
#distinct = distinct[0]<42 : i32>
"test.op"() {distinct.attr = distinct[1]<>, nested = distinct[2]<#distinct>} : () -> ()
--------------------------------------------------------------------------------

(toplevel
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (distinct_attribute
          (integer_literal)
          (attribute_value
            (integer_literal)
            (type
              (builtin_type
                (integer_type))))))))
  (operation
    (generic_operation
      (string_literal)
      (attribute
        (dictionary_attribute
          (attribute_entry
            (bare_id)
            (attribute_value
              (builtin_attribute
                (distinct_attribute
                  (integer_literal)))))
          (attribute_entry
            (bare_id)
            (attribute_value
              (builtin_attribute
                (distinct_attribute
                  (integer_literal)
                  (attribute_value
                    (attribute_alias))))))))
      (function_type))))

================================================================================
Distinct builtin attribute rejects signed ID
================================================================================
"test.op"() {bad = distinct[-1]<unit>} : () -> ()
--------------------------------------------------------------------------------

(toplevel
  (operation
    (generic_operation
      (string_literal)
      (attribute
        (dictionary_attribute
          (attribute_entry
            (bare_id))
          (ERROR
            (unit_literal))))
      (function_type))))

================================================================================
Pretty dialect attribute with special body tokens
================================================================================
func.func @pretty_dialect_attribute_body_tokens() {
  "foo.unknown_op"() {foo = #foo.complexattr<abcd<[f]$$[32]>>} : () -> ()
  "foo.unknown_op"() {bar = #foo.dialect<!x@#!@#>} : () -> ()
  "test.slash_attr"() {attr = #test.slash_attr<1 / 2>} : () -> ()
  "test.acc_attr"() {routine = #acc.specialized_routine<@routine, <vector>, "host">} : () -> ()
  return
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    rhs: (custom_operation
      (func_operation
        sym_name: (symbol_ref_id)
        arguments: (func_arg_list)
        body: (region
          (entry_block
            (operation
              rhs: (generic_operation
                (string_literal)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (dialect_attribute
                          (pretty_dialect_item
                            (dialect_namespace)
                            (dialect_ident)
                            (pretty_dialect_item_body
                              (bare_id)
                              (pretty_dialect_item_body
                                (bare_id)
                                (integer_literal)))))))))
                (function_type)))
            (operation
              rhs: (generic_operation
                (string_literal)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (dialect_attribute
                          (pretty_dialect_item
                            (dialect_namespace)
                            (dialect_ident)
                            (pretty_dialect_item_body
                              (type
                                (type_alias)))))))))
                (function_type)))
            (operation
              rhs: (generic_operation
                (string_literal)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (dialect_attribute
                          (pretty_dialect_item
                            (dialect_namespace)
                            (dialect_ident)
                            (pretty_dialect_item_body
                              (integer_literal)
                              (integer_literal))))))))
                (function_type)))
            (operation
              rhs: (generic_operation
                (string_literal)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (dialect_attribute
                          (pretty_dialect_item
                            (dialect_namespace)
                            (dialect_ident)
                            (pretty_dialect_item_body
                              (bare_id)
                              (pretty_dialect_item_body)
                              (string_literal))))))))
                (function_type)))
            (operation
              rhs: (custom_operation
                name: (custom_op_name)))))))))

================================================================================
linalg.generic with attributes using attribute aliases
================================================================================
#map0 = affine_map<(d0, d1) -> (d0, d1)>
#map1 = affine_map<(d0, d1) -> (d0)>
#map2 = affine_map<(d0) -> (d0)>

func.func @add_broadcast_mul_fusion(%arg0: tensor<?xf32>, %arg1 : tensor<?xf32>,
  %arg2 : tensor<?x?xf32>) -> tensor<?x?xf32>
{
  %c0 = arith.constant 0 : index
  %c1 = arith.constant 1 : index
  %0 = tensor.dim %arg0, %c0 : tensor<?xf32>
  %1 = tensor.empty(%0) : tensor<?xf32>
  %2 = linalg.generic {indexing_maps = [#map2, #map2, #map2], iterator_types = ["parallel"]}
      ins(%arg0, %arg1 : tensor<?xf32>, tensor<?xf32>)
      outs(%1 : tensor<?xf32>) {
    ^bb0(%arg3: f32, %arg4: f32, %arg5: f32):
      %3 = arith.addf %arg3, %arg4 : f32
      linalg.yield %3 : f32
  } -> tensor<?xf32>
  %3 = tensor.dim %arg2, %c1 : tensor<?x?xf32>
  %4 = tensor.empty(%0, %3) : tensor<?x?xf32>
  %5 = linalg.generic {indexing_maps = [#map1, #map0, #map0], iterator_types = ["parallel", "parallel"]}
      ins(%2, %arg2 : tensor<?xf32>, tensor<?x?xf32>)
      outs(%4 : tensor<?x?xf32>){
    ^bb0(%arg5: f32, %arg6: f32, %arg7: f32):
      %6 = arith.mulf %arg5, %arg6 : f32
      linalg.yield %6 : f32
    } -> tensor<?x?xf32>
  return %5 : tensor<?x?xf32>
}
--------------------------------------------------------------------------------

(toplevel
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (affine_map
          (bare_id)
          (bare_id)
          (bare_id)
          (bare_id)))))
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (affine_map
          (bare_id)
          (bare_id)
          (bare_id)))))
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (affine_map
          (bare_id)
          (bare_id)))))
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (tensor_type
                (dim_list
                  (type
                    (builtin_type
                      (float_type)))))))
          (value_use)
          (type
            (builtin_type
              (tensor_type
                (dim_list
                  (type
                    (builtin_type
                      (float_type)))))))
          (value_use)
          (type
            (builtin_type
              (tensor_type
                (dim_list
                  (type
                    (builtin_type
                      (float_type))))))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (tensor_type
                  (dim_list
                    (type
                      (builtin_type
                        (float_type)))))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (integer_literal)
                (type
                  (builtin_type
                    (index_type)))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (integer_literal)
                (type
                  (builtin_type
                    (index_type)))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (attribute_alias)
                        (attribute_alias)
                        (attribute_alias)))
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (string_literal)))))
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))
                (bare_id)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))
                (region
                  (block
                    (block_label
                      (caret_id)
                      (block_arg_list
                        (value_use)
                        (type
                          (builtin_type
                            (float_type)))
                        (value_use)
                        (type
                          (builtin_type
                            (float_type)))
                        (value_use)
                        (type
                          (builtin_type
                            (float_type)))))
                    (operation
                      (op_result
                        (value_use))
                      (custom_operation
                        (custom_op_name)
                        (value_use)
                        (value_use)
                        (type
                          (builtin_type
                            (float_type)))))
                    (operation
                      (custom_operation
                        (custom_op_name)
                        (value_use)
                        (type
                          (builtin_type
                            (float_type)))))))
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (attribute_alias)
                        (attribute_alias)
